fix: adjust mobile header alignment (#18)
* fix: adjust mobile alignment

* fix: remove unnecessary display flex related property.

--- a/src/gatsby-theme-carbon/components/HeaderShadow.module.scss
+++ b/src/gatsby-theme-carbon/components/HeaderShadow.module.scss
@@ -5,10 +5,9 @@
   text-decoration: none;
   left: 3rem;
   white-space: nowrap;
-  height: 3rem;
+  height: 1.375rem;
   border-top: 1px solid transparent;
-  display: flex;
-  align-items: center;
+  display: table-cell;
 
   &:focus {
     outline: 2px solid $inverse-01;
